@@ -4,6 +4,10 @@
 
  Changes between 0.9.7l and 0.9.7m-fips2 [xx XXX xxxx]
 
+  *) New build option fipsdso to link fipscanister.o into a DSO called 
+     libfips.so and modify build system to link against it.
+     [Steve Henson]
+
   *) New version of RSA_{sign,verify} for FIPS code. This uses pregenerated
      DigestInfo encodings and thus avoids all ASN1 library dependencies. Update
      FIPS digests to use new functions. Remove large numbers of obsolete 
